--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_auth: ^5.5.1
   firebase_core: ^3.12.1
   fluttertoast: ^8.2.12
+  calendar_view: ^1.4.0
 
 dev_dependencies:
   flutter_test:
