--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^3.12.1
   fluttertoast: ^8.2.12
   calendar_view: ^1.4.0
+  cloud_firestore: ^5.6.5
 
 dev_dependencies:
   flutter_test:
